--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="control-btn" data-action="lite" id="lite-btn">Lite: AUTO</span>
         </div>
     </div>
-    <div class="mouse-hint">Click for SAT2 • Triple-click for TRDUTSCO</div>
+    <div class="mouse-hint">Click for SAT2</div>
     
     <script>
 // config
