--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Visual Patterns</title>
+    <title>🔱</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400&display=swap');
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -43,7 +43,7 @@
             <span class="control-btn" data-action="lite" id="lite-btn">Lite: AUTO</span>
         </div>
     </div>
-    <div class="mouse-hint">Click for SAT2 • Triple-click for TRDUTSCO</div>
+    <div class="mouse-hint">Click for SAT2</div>
     
     <script>
 // config
